# rdkb-servicemanager

./: AUTHORS  CONTRIBUTING.md  Makefile.am  README  configure.ac
config/: TR181-ServiceManager.xml
include/: servicemanager.h
source/: Makefile.am
source-arm/ServiceManager/board_ml/: Makefile.am  cosa_servicemanager_ml.c
source-arm/ServiceManager/board_sbapi/: Makefile.am  cosa_servicemanager_apis.c
source-atom/: Makefile.am
source-atom/ServiceManager/: Makefile.am
source-atom/ServiceManager/board_ml/: Makefile.am  cosa_servicemanager_ml.c
source-atom/ServiceManager/board_sbapi/: Makefile.am  cosa_servicemanager_apis.c
source/ServiceManagerCore/: Makefile.am  servicemanager.c
source/ServiceManagerSsp/: Makefile.am  cosa_servicemanager_dml.c  cosa_servicemanager_dml.h  cosa_servicemanager_internal.c  cosa_servicemanager_internal.h  plugin_main.c  plugin_main.h  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
