##########################################################################
# If not stated otherwise in this file or this component's Licenses.txt
# file the following copyright and licenses apply:
#
#   Copyright [2016] [Comcast]
#
#   Comcast Proprietary and Confidential
#
#   All Rights Reserved.
#
#   Unauthorized copying of this file, via any medium is strictly prohibited
#
##########################################################################
SUBDIRS = ServiceManagerSsp ServiceManagerCore
